--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   provider: ^4.3.2+3
   uuid: ^2.2.2
   http: ^0.12.2
+  flutter_facebook_login: ^3.0.0
+  flutter_signin_button: ^1.1.0
+  font_awesome: ^5.10.1
+  cached_network_image: ^2.4.1
+  webview_flutter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
@@ -56,7 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-  #   - images/a_dot_ham.jpeg
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
