--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,6 @@ dependencies:
   firebase_core: ^0.5.3
   passwordfield: ^0.0.82
   validators: ^2.0.1
-  image_picker: ^0.6.7+15
   provider: ^4.3.2+3
   uuid: ^2.2.2
   http: ^0.12.2
@@ -42,6 +41,9 @@ dependencies:
   font_awesome: ^5.10.1
   cached_network_image: ^2.4.1
   webview_flutter: ^1.0.7
+  permission_handler: ^5.0.1+1
+  firebase_storage: ^5.2.0
+  image_picker: ^0.6.7+17
 
 dev_dependencies:
   flutter_test:
