--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,27 +23,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  cached_network_image: ^2.5.0
+  cloud_firestore: ^0.14.4
   cupertino_icons: ^1.0.0
   firebase_auth: ^0.18.4+1
-  cloud_firestore: ^0.14.4
   firebase_core: ^0.5.3
-  passwordfield: ^0.0.82
-  validators: ^2.0.1
-  provider: ^4.3.2+3
-  uuid: ^2.2.2
-  http: ^0.12.2
+  firebase_storage: ^5.2.0
   flutter_facebook_login: ^3.0.0
   flutter_signin_button: ^1.1.0
+  flutter_vector_icons: ^0.2.1
+  fluttertoast: ^7.1.6
   font_awesome: ^5.10.1
-  cached_network_image: ^2.4.1
-  webview_flutter: ^1.0.7
-  permission_handler: ^5.0.1+1
-  firebase_storage: ^5.2.0
+  http: ^0.12.2
+  image_cropper: ^1.3.1
   image_picker: ^0.6.7+17
+  passwordfield: ^0.0.82
+  permission_handler: ^5.0.1+1
+  provider: ^4.3.2+3
+  uuid: ^2.2.2
+  validators: ^2.0.1
+  webview_flutter: ^1.0.7
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +50,6 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -64,13 +62,10 @@ flutter:
   assets:
     - assets/images/
     - assets/icons/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
